[package]
name = "mwc713"
version = "5.3.1"
authors = ["vault713 devs"]
description = "A wallet that makes it easy to send, store, and swap MWC."
keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "mwc713"
path = "src/main.rs"

[[bin]]
name = "mwczip"
path = "src/zip/main.rs"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
path-clean = "1"
colored = "1.6"
toml = "0.5"
clap = { version = "2.33", features = ["yaml"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
blake2-rfc = "0.2"
log = "0.4"
url = "2.1"
parking_lot = {version = "0.10"}
commands = "0.0.5"
enquote = "1.0"
zip = { version = "0.5", features = ["deflate"] }
ed25519-dalek = "1.0.0-pre.4"
thiserror = "1"

# Release
grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }

# For bleeding edge
#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }

# For local testing
#grin_api = { path = "../mwc-node/api"}
#grin_core = { path = "../mwc-node/core"}
#grin_keychain = { path = "../mwc-node/keychain"}
#grin_chain = {path = "../mwc-node/chain"}
#grin_util = { path = "../mwc-node/util"}
#grin_store = { path = "../mwc-node/store"}
#grin_p2p = { path = "../mwc-node/p2p"}
#grin_wallet_impls = { path = "../mwc-wallet/impls"}
#grin_wallet_libwallet = { path = "../mwc-wallet/libwallet"}
#grin_wallet_api = { path = "../mwc-wallet/api"}
#grin_wallet_controller = { path = "../mwc-wallet/controller"}
#grin_wallet_config = { path = "../mwc-wallet/config"}
#grin_wallet_util = { path = "../mwc-wallet/util"}

# OS specific dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
rustyline = "6"
rpassword = "4.0"
dirs = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.11"
