[package]
name = "mwc713"
version = "5.3.3"
authors = ["vault713 devs"]
description = "A wallet that makes it easy to send, store, and swap MWC."
keywords = [ "mwc", "mwcproject", "rust", "crypto", "cryptocurrency" ]
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "mwc713"
path = "src/main.rs"

[[bin]]
name = "mwczip"
path = "src/zip/main.rs"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
path-clean = "1"
colored = "1.6"
toml = "0.5"
clap = { version = "2.33", features = ["yaml"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
blake2-rfc = "0.2"
log = "0.4"
url = "2.1"
parking_lot = {version = "0.10"}
commands = "0.0.5"
enquote = "1.0"
zip = { version = "0.5", features = ["deflate"] }
ed25519-dalek = "1.0.0-pre.4"
thiserror = "1"

# Release
mwc_core = { git = "https://github.com/mwcproject/mwc-node", version="5.3.7", tag = "5.3.7" }
mwc_keychain = { git = "https://github.com/mwcproject/mwc-node", version="5.3.7", tag = "5.3.7" }
mwc_util = { git = "https://github.com/mwcproject/mwc-node", version="5.3.7", tag = "5.3.7" }
mwc_api = { git = "https://github.com/mwcproject/mwc-node", version="5.3.7", tag = "5.3.7" }
mwc_store = { git = "https://github.com/mwcproject/mwc-node", version="5.3.7", tag = "5.3.7" }
mwc_p2p = { git = "https://github.com/mwcproject/mwc-node", version="5.3.7", tag = "5.3.7" }
mwc_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", version="5.3.4", tag = "5.3.4" }
mwc_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", version="5.3.4", tag = "5.3.4" }
mwc_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", version="5.3.4", tag = "5.3.4" }
mwc_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", version="5.3.4", tag = "5.3.4" }
mwc_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", version="5.3.4", tag = "5.3.4" }
mwc_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", version="5.3.4", tag = "5.3.4" }

# For bleeding edge
#mwc_core = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_util = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_api = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_store = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
#mwc_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
#mwc_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
#mwc_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
#mwc_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
#mwc_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }

# For local testing
#mwc_api = { path = "../mwc-node/api"}
#mwc_core = { path = "../mwc-node/core"}
#mwc_keychain = { path = "../mwc-node/keychain"}
#mwc_util = { path = "../mwc-node/util"}
#mwc_store = { path = "../mwc-node/store"}
#mwc_p2p = { path = "../mwc-node/p2p"}
#mwc_wallet_impls = { path = "../mwc-wallet/impls"}
#mwc_wallet_libwallet = { path = "../mwc-wallet/libwallet"}
#mwc_wallet_api = { path = "../mwc-wallet/api"}
#mwc_wallet_controller = { path = "../mwc-wallet/controller"}
#mwc_wallet_config = { path = "../mwc-wallet/config"}
#mwc_wallet_util = { path = "../mwc-wallet/util"}

# OS specific dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
rustyline = "6"
rpassword = "4.0"
dirs = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.11"
